feat: modified warnsdorff & new test (#64)